--- a/src/main/webapp/styles/formulario-inicio-sesion.css
+++ b/src/main/webapp/styles/formulario-inicio-sesion.css
@@ -1,8 +1,5 @@
-
-
 form{
     width: 50%;
-    height: 50%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -11,18 +8,30 @@ form{
     background-color: var(--color--body);
     border-radius: 20px;
     font-weight: bold;
+    padding: 2rem;
 }
 
-form label{
+
+#form-cambiante{
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: height 0.3s ease-in-out;
+}
+
+#form-cambiante label{
     font-size: 1.5rem;
     font-weight: 500;
     color: var(--color--enfasis);
     margin: 0.5rem 0;
-    width: 50%;
+    width: 75%;
 }
 
-form input{
-    width: 50%;
+#form-cambiante input[type="text"], form input[type="password"], form input[type="email"]{
+    width: 75%;
     height: 2rem;
     margin: 0.5rem 0;
     padding: 1.5rem 1rem;
@@ -32,9 +41,15 @@ form input{
     caret-color: var(--color--enfasis);
 }
 
-form input[type="submit"]{
-    width: 25%;
+#form-cambiante input[type="submit"]{
     height: 3rem;
     text-align: center;
     margin-top: 1rem;
+}
+
+#red-registrar{
+    font-weight: 500;
+    margin-top: 1rem;
+    border: none;
+    cursor: pointer;
 }
