--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -2,7 +2,7 @@
     background-color: var(--color--navbar);
 }
 
-main{
+.main-login{
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
@@ -13,7 +13,7 @@ main{
     align-items: center;
 }
 
-main p{
+.main-login p{
     font-size: 40px;
     font-weight: bold;
     color: var(--color--enfasis);
