--- a/src/main/webapp/styles/tester.css
+++ b/src/main/webapp/styles/tester.css
@@ -1,1 +1,37 @@
+@import url("./normalize.min.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
+@import url("./header.css");
+@import url("./main.css");
+@import url("./formulario-inicio-sesion.css");
+@import url("./logged.css");
+
+:root{
+    --color--body: #f4f4f4;
+    --color--fondo: #3a3a3a;
+    --color--enfasis: #B80E65;
+    --color--enfasis--lg: rgb(18, 18, 64);
+    --color--navbar: #1c1b4d;
+    --color--texto--lg: rgb(232, 232, 232);
+    --color--main: #353465;
+}
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.container{
+    width: 100%;
+}
+
+body{
+    max-height: 100vh;
+    overflow: hidden;
+}
+
+a{
+    text-decoration: none;
+}
