--- a/src/main/webapp/styles/logged/logged-tests.css
+++ b/src/main/webapp/styles/logged/logged-tests.css
@@ -1,16 +1,165 @@
 .contenido-main{
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
 }
 
 .form-logged{
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    padding: 2vw;
+}
+
+.form-nuevo-test-sup{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 2vw;
+}
+
+.form-nuevo-test-sup label{
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: var(--color--enfasis);
+    margin: 0.5rem 0;
+    width: 75%;
+}
+
+.form-nuevo-test-sup  input, .form-nuevo-test-sup textarea, .form-nuevo-test-sup select{
+    width: 75%;
+    height: 2rem;
+    margin: 0.5rem 0;
+    border: 1px solid var(--color--enfasis);
+    border-radius: 5px;
+    outline: none;
+    caret-color: var(--color--enfasis);
+}
+
+.form-nuevo-test-sup input, .form-nuevo-test-sup textarea{
+    padding: 1.5rem 1rem;
+}
+
+.form-nuevo-test-sup select{
+    padding: 0 1rem;
+    height: 3rem;
+}
+
+.form-nuevo-test-sup textarea{
+    resize: none;
+    height: 9rem;
+}
+
+.posible-resultado-label{
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: var(--color--enfasis);
+    margin: 0.5rem 0;
+    width: 50%;
+}
+
+#cabecera-posibles-resultados{
+    width: 75%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#agnadir-posible-resultado{
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    background-color: var(--color--enfasis);
+    margin: 0.5rem 0;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+#agnadir-posible-resultado .fa-plus{
+    font-size: 2rem;
+    color: white;
+}
+
+#tabla-posibles-resultados{
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 2vw;
+}
+
+#tabla-posibles-resultados thead tr, #tabla-posibles-resultados tbody tr{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+#tabla-posibles-resultados tbody tr input{
+    height: 2rem;
+    align-items: center;
+    margin: 0.5rem 0;
+    padding: 0 1rem;
+    border: 1px solid var(--color--enfasis);
+    border-radius: 5px;
+    outline: none;
+    caret-color: var(--color--enfasis);
+}
+
+.eliminar-posible-resultado .fa-trash {
+    color: var(--color--enfasis);
+    cursor: pointer;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2rem;
+    margin: 0.5rem 0;
+}
+
+.cabecera-tb-posibles-resultados{
+    width: 33%;
+    height: 3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.scrollable{
+    overflow-y: auto;
+}
+
+.boton-siguiente{
+    width: 75%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.next-step, .prev-step{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-top: 2vw;
+    cursor: pointer;
+    background-color: var(--color--enfasis);
+    border-radius: 5px;
+    padding: 0.5rem 1rem;
+    color: white;
+}
+
+.non-visible{
+    visibility: hidden;
+}
+
+.non-visible-none{
+    display: none;
 }
