--- a/src/main/webapp/styles/tester.css
+++ b/src/main/webapp/styles/tester.css
@@ -5,7 +5,7 @@
 @import url("./main.css");
 @import url("./formulario-inicio-sesion.css");
 @import url("./logged.css");
-
+@import url("./responsive.css");
 :root{
     --color--body: #f4f4f4;
     --color--fondo: #3a3a3a;
